# neon-rs

./: .env  .gitignore  Cargo.toml  README.md  bump-src.sh  check-src-pollution.sh  dummy.txt  package-lock.json  package.json  pre-commit
.github/actions/: setenv.yml
.github/variables/: git.env  node.env
.github/workflows/: .env  build.yml  ci.yml  comment.yml  comments.yml  publish.yml  release.yml  test.yml
pkgs/: package-lock.json  package.json
pkgs/cargo-messages/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  test.json
pkgs/cli/: .gitignore  README.md  bundle.jq  index.js  package.json  tsconfig.json
pkgs/cli-dev/: .gitignore  package-lock.json  package.json  tsconfig.json
pkgs/install/: index.js  package.json
pkgs/load/: package.json  tsconfig.json
pkgs/sub-install/: index.js  package.json
src/: .npmrc  bump-workspaces.sh  package-lock.json  package.json
src/artifact/: LICENSE  README.md  (+2 more)
test/integration/sniff-bytes/: .gitignore  .npmignore  Cargo.toml  package-lock.json  package.json  tsconfig.json
test/integration/sniff-bytes/lib/: index.cjs  index.d.cts  index.mjs  load.cjs  load.js
test/integration/sniff-bytes/npm/darwin-arm64/: package.json
test/integration/sniff-bytes/npm/darwin-x64/: package.json
test/integration/sniff-bytes/npm/linux-arm-gnueabihf/: README.md
test/integration/sniff-bytes/npm/linux-x64-gnu/: package.json
test/integration/sniff-bytes/src/: lib.rs
test/integration/sniff-bytes/ts/: index.cts  index.mts  load.cts  load.ts
test/integration/sniff-bytes/types/: index.d.cts  index.d.mts
(+140 files in other folders)
